[project]
name = "cred_db_mcp_server"
version = "0.1.0"
description = "Credential Database MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "gradio[mcp]>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cred_db_mcp_server"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
